src/styles/rain.css
/* rain.css */
*,
*::before,
*::after {
  box-sizing: border-box;
}

body {
  background-color: #ffffff;
  display: flex;
  height: 100vh;
  margin: 0;
  overflow: hidden; /* Prevent vertical scrollbar */
}

.rain-container {
  display: flex;
  height: 100vh;
  overflow: hidden;
  position: relative;
}

.rain__drop {
  animation-delay: calc(var(--d) * 1s);
  /* Change the value to increase rain speed */
  animation-duration: calc(var(--a) * 5s);
  animation-iteration-count: infinite;
  animation-name: drop;
  animation-timing-function: linear;
  height: 30px;
  position: absolute;
  left: calc(var(--x) * 1%);
  top: calc((var(--y) + 50) * -1px);
}

.rain__drop path {
  fill: #a1c6cc;
  opacity: var(--o);
  /* Change the value to increase rain size */
  transform: scaleY(calc(var(--s) * 4));
}

@keyframes drop {
  90% {
    opacity: 1;
  }
  100% {
    opacity: 0;
    transform: translateY(100vh);
  }
}

